add chat and review to friend profile matched

--- a/match/templates/Friend_profile.html
+++ b/match/templates/Friend_profile.html
@@ -14,6 +14,8 @@
             <p>First name : {{ firstname }} </p>
             <p>Last  name : {{ lastname }} </p>
             <p>Email address     : {{ email }} </p>
+                <button type="button" class="btn btn-outline-warning btn-sm" onclick="location.href='{% url 'room' id   %}'"> chat </button>
+                <br>
             <button type="button" class="btn btn-outline-danger btn-sm" onclick="location.href='{% url 'unmatched' username   %}'"> Unmatched ! </button>
 
             <br><br>
@@ -22,4 +24,161 @@
         </div>
     </div>
     </form>
+<br>
+
+<div class="container">
+  <div class="row">
+      <div class="comments" style="padding: 10px;">
+          <div class="card-body">
+<h3 class="font-weight-bold">Review</h3>
+              <div class="comments" style="padding: 5px;">
+              <p class="font-weight-bold"> total review score </p>
+                  {% if meanstar == 0 %}
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
+    {% if meanstar == 1 %}
+
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
+    {% if meanstar == 2 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
+    {% if meanstar == 3 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
+    {% if meanstar == 4 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star normal"></span>{% endif %}
+    {% if rmeanstar == 5 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>{% endif %}
+                  <p > User rating:{% if usercomall %} {{ usercomall.count }}{% else %} 0 {% endif %}  </p>
+
+              </div>
+
+<br>
+<div class="comments" style="padding: 10px;">
+            <h4 class="font-weight-bold"> Leave a review </h4><br>
+            <p class="font-weight-bold">Name : {{ user.username }}</p>
+    <p class="font-weight-bold">Rating :</p>
+
+            <p class="font-weight-bold"> Message*</p>
+<form action="{% url 'write_review_matched' username %}" method="post">{% csrf_token %}
+    <textarea rows="4" cols="50" name="item_review" id="id_review" placeholder="Write Your Message Here" ></textarea>
+    <div class="rating">
+    <input type="radio" name="star" value="5" id="star1"><label for="star1">
+</label>
+    <input type="radio" name="star" value="4" id="star2"><label for="star2">
+</label>
+    <input type="radio" name="star" value="3" id="star3"><label for="star3">
+</label>
+    <input type="radio" name="star" value="2" id="star4"><label for="star4">
+</label>
+    <input type="radio" name="star" value="1" id="star5"><label for="star5">
+</label>
+</div>
+
+    <br>
+   {% if nomessage %} {{nomessage}}<br>{% endif %}
+    <button type="submit" class="btn btn-secondary btn-sm btn-block"> Review </button>
+</form>
+
+
+    </div>
+    </div>
+    </div>
+    </div>
+</div>
+
+
+<div class="container">
+  <div class="row">
+      <div class="comments" style="padding: 5px;">
+          <div class="card-body">
+{% if usercomall %}
+{% for review in usercomall %}
+{% csrf_token %}
+
+<tr><td> <div class="container">
+
+  <div class="row">
+      <div class="comments" style="padding: 10px;">
+          <div class="card-body">
+          - <b>{{ review.realname }}</b> :
+    {% if review.star == 0 %}
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
+    {% if review.star == 1 %}
+
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
+    {% if review.star == 2 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
+    {% if review.star == 3 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star normal"></span>
+<span class="fa fa-star normal"></span>{% endif %}
+    {% if review.star == 4 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star normal"></span>{% endif %}
+    {% if review.star == 5 %}
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>{% endif %}
+
+    <br> {{ review.message }}   <br>
+</div>
+    </div>
+  </div>
+    </div>
+</td></tr>
+{% endfor %}
+{% endif %}
+
+{% if Nocomment %}
+No one comment here.
+{% endif %}
+
+          </div>
+      </div>
+  </div>
+</div>
+
+
+<br>
 {% endblock content %}
