--- a/match/templates/Friend_matched.html
+++ b/match/templates/Friend_matched.html
@@ -24,7 +24,7 @@
         <table id="id_list_matching2">
             My Student
             {% for student in allstudent %}
-            <tr><td>{{ forloop.counter }}: {{ student }}          <button type="button" class="btn btn-outline-primary btn-sm" onclick="location.href='{% url 'friendprofile' student   %}'"> Profile </button> <button type="button" class="btn btn-outline-primary btn-sm" onclick="location.href='{% url 'room' student %}'"> Message </button>  <br></td></tr>
+            <tr><td>{{ forloop.counter }}: {{ student }}          <button type="button" class="btn btn-outline-primary btn-sm" onclick="location.href='{% url 'friendprofile' student   %}'"> Profile </button>
             {% endfor %}
         </table>
 {% endif %}
