add about app and about group

--- a/match/templates/other_profile.html
+++ b/match/templates/other_profile.html
@@ -168,12 +168,13 @@
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>{% endif %}
 
-    <br> {{ review.message }}   <br>
+    <br> messege : {{ review.message }}
 </div>
     </div>
   </div>
     </div>
 </td></tr>
+              <br>
 {% endfor %}
 {% endif %}
 
