Add picture in about app and about group page

--- a/match/templates/aboutus/about_app.html
+++ b/match/templates/aboutus/about_app.html
@@ -8,12 +8,8 @@
     <meta charset="UTF-8">
     <title>About app</title>
 </head>
-<p>Edu-Match คือ Application สำหรับการให้ผู้ใช้ได้นัดติวในวิชาที่แต่ละคนสนใจ โดยเปิดโอกาสให้ได้เป็นได้ทั้ง tutor และ student </p>
-<p>ประกอบไปด้วย 4 feature </p>
-<p>1. add expert subject </p>
-<p>2. Searching for bad subject</p>
-<p>3. Tutor&Student</p>
-<p>4. Chat</p>
+<body style="background-color:#373c42;">
+    <center><img align="middle" src="media/pic/AboutWeb.jpg" width="891" height="630"></center>
 </body>
 </html>
 {% endblock content %}
