--- a/match/templates/aboutus/about_group.html
+++ b/match/templates/aboutus/about_group.html
@@ -8,12 +8,8 @@
     <meta charset="UTF-8">
     <title>About group</title>
 </head>
-<body>
-<h1>สมาชิกผู้จัดทำ</h1>
-<p>นายภาสกร		เเพรญาติ		6101012630135 ทำในส่วนของ Signup , Login , Edit profile , Change password
-</p>
-<p>นายเดชมนต์   แจ้งจิตต์		6101012610061 ทำในส่วนของ Matching , view other profile , review</p>
-<p>นายกฤษณพงษ์	รอดจริง		6101012630011 ทำในส่วนของ Chat</p>
+<body style="background-color:#373c42;">
+<center><img align="middle" src="media/pic/info.jpg" width="1350" height="630"></center>
 </body>
 </html>
 {% endblock content %}
