Add css in login page

--- a/match/templates/base.html
+++ b/match/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/rating.css' %}">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
     <title>{% block title %}{% endblock %}</title>
+
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -29,11 +30,9 @@ font-size: 20px;
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             {% if user.is_authenticated %}
+
             <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Home</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" id="id_profile" href="/profile/">Profile</a>
+            <a class="nav-link" id="id_profile" href="/profile/">&nbsp;&nbsp;Profile</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="{% url 'profile_add_subject' %}">Add expert subject</a>
@@ -57,9 +56,7 @@ font-size: 20px;
             <a class="nav-link disabled" href="#">You are Logged in as {{ user.first_name }}</a>
             <a class="btn btn-outline-danger my-2 my-sm-0" href="{% url 'logout' %}">Log Out</a>
             {% else %}
-            <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Home</a>
-            </li>
+
             </ul>
             <a class="btn btn-outline-success  mr-sm-1" href="{% url 'login' %}">Log in</a>
             <a class="btn btn-outline-warning  my-sm-0" href="{% url 'SignUpView' %}">Sign Up</a>
