--- a/match/templates/registration/login.html
+++ b/match/templates/registration/login.html
@@ -1,14 +1,47 @@
 {% extends 'base.html' %}
 
 {% block title %}Login{% endblock %}
-
 {% block content %}
-    <h2>Log in</h2>
-    <form method="POST" class="form-group">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit" class="btn btn-success">Log in</button>
-        <a href="{% url 'password_reset' %}">Forgot your password?</a>
 
-    </form>
+<head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+</head>
+
+<div class="mdl-layout mdl-js-layout" style = 'align-items:center; justify-content: center;'>
+  <main class="mdl-layout__content" style = 'padding:24px; flex: none'>
+    <div class="mdl-card mdl-shadow--6dp">
+      <div class="mdl-card__title mdl-color--primary mdl-color-text--white">
+        <h2 class="mdl-card__title-text">Login</h2>
+      </div>
+      <div class="mdl-card__supporting-text">
+
+            <form id="login-form" method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                  <div class="mdl-textfield mdl-js-textfield">
+                    <label >&nbsp;Username  </label>
+                    {{ form.username }}
+
+                  </div>
+                  <div class="mdl-textfield mdl-js-textfield">
+                  <label >&nbsp;Password  </label>
+                  {{ form.password }}
+
+        					</div>
+
+                {% if form.errors %}
+                  <p class=" label label-danger">Your username and password didn't match. Please try again.</p>
+                {% endif %}
+
+                  <button type="submit" class="btn btn-success">Log in</button>
+                  <a href="{% url 'password_reset' %}">&nbsp;&nbsp;Forgot your password?</a>
+
+            </form>
+        </div>
+    </div>
+  </main>
+</div>
+
+
 {% endblock %}
