--- a/match/templates/registration/change_password.html
+++ b/match/templates/registration/change_password.html
@@ -3,10 +3,27 @@
 {% block title %}Change Password Page{% endblock title %}
 
 {% block content %}
-    <h2>Change Password</h2>
+
+<style>
+div.text {
+  padding-left: 100px;
+
+}
+
+body {
+  background-image: url("{% url 'home' %}media/pic/right.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: right;
+  background-size: 350px 800px;
+}
+
+</style>
+    <div class="text"><br><h2>Change Password</h2>
+    <hr>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Submit</button><br>
-    </form>
+        <button type="submit" class="btn btn-success">Submit</button><br>
+    </form></div>
 {% endblock content %}
