--- a/match/templates/add_subject.html
+++ b/match/templates/add_subject.html
@@ -4,41 +4,81 @@
 
 {% block content %}
 <html>
-        <h2>Add expert subject</h2>
+<style>
+div.text {
+  padding-left: 50px;
+
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+body {
+  background-image: url("{% url 'home' %}media/pic/left.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: right;
+  background-size: 350px 630px;
+}
+
+
+</style>
+<div class="text">
+        <br>
+        <h2>Add expert subject</h2><hr>
         <h3>Name : {{ user.first_name }}  {{ user.last_name }}</h3>
-        <p>Username : {{ user.username }} </p>
-       <table>
-               <p>My expert subject :</p>
-           <form action="{% url 'add_subject' %}" method="post">
+
+        <form action="{% url 'add_subject' %}" method="post">
+            <label>My expert subject :</label>
             <input name="item_subject" id="id_new_subject" placeholder="Enter a expert Subject" />
-            </ul><button type="submit" value="Submit"> Add </button>
+            <button type="submit" value="Submit" class="btn btn-success"> Add </button>
             {% csrf_token %}
         </form>
-        </table>
+
 
         {% if User %}
         <table id="id_list_table">
+            <col width="10">
+            <col width="500">
+              <tr>
+                <th>Select</th>
+                <th>Subject</th>
+
+              </tr>
             <form action="{% url 'clean' %}" method="post">
                 {% if fillyourbox %}
-                {{ fillyourbox }}
+                    {{ fillyourbox }}
                 {% endif %}
                 <br>
             {% for new_subject in User.subject.all %}
-
-
-                <tr><td><input type="checkbox" name="new_subject" id="new_subject{{ forloop.counter }}" value="{{ new_subject.id }}"><label for="new_subject{{ forloop.counter }}">{{ forloop.counter }}: {{ new_subject }}</label><br></td></tr>
+                <tr><td style="text-align:center;"><input type="checkbox" name="new_subject" id="new_subject{{ forloop.counter }}" value="{{ new_subject.id }}"></td><td><label for="new_subject{{ forloop.counter }}">{{ new_subject }}</label><br></td></tr>
             {% endfor %}
+                </table><br>
+
                 {% if checkremovebutton %}
-                <button id="id_delete_subject"type="submit">Remove</button>
+                    <td><button id="id_delete_subject"type="submit" class="btn btn-fail">Remove</button></td>
                 {% endif %}
                 {{ error_message }}
 
                 {% csrf_token %}
             </form>
-        </table>
+
 
         {% endif %}
 
-    </body>
+   </div>
 </html>
 {% endblock %}
