fix bug star didn't show when meanstar get

--- a/match/templates/other_profile.html
+++ b/match/templates/other_profile.html
@@ -71,7 +71,7 @@
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star normal"></span>{% endif %}
-    {% if rmeanstar == 5 %}
+    {% if meanstar == 5 %}
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
