--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -14,9 +14,9 @@
 </body>
 <script>
     var roomName = "{{ room_name|escapejs }}";
-
+    var wss_protocol =(window.location.protocol == 'https:')? 'wss://' :'ws://';
     var chatSocket = new WebSocket(
-        'ws://' + window.location.host +
+        wss_protocol + window.location.host +
         '/ws/chat/' + roomName + '/');
 
     chatSocket.onmessage = function(e) {
