--- a/match/templates/Friend_profile.html
+++ b/match/templates/Friend_profile.html
@@ -2,7 +2,23 @@
 
 {% block title %}Profile{% endblock title %}
 
-{% block content %} 
+{% block content %}
+<style>
+        div.text {
+          padding-left: 50px;
+
+        }
+
+        body {
+          background-image: url("{% url 'home' %}media/pic/right.png");
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-position: right;
+          background-size: 350px 800px;
+        }
+</style>
+<div class="text">
+    <br>
     <h2> {{ username }}'s profile</h2>
     <form method="post">
         <div class="content-section">
@@ -24,6 +40,7 @@
         </div>
     </div>
     </form>
+</div>
 <br>
 
 <div class="container">
