--- a/match/templates/base.html
+++ b/match/templates/base.html
@@ -19,6 +19,29 @@ font-size: 20px;
   font-size: 20px;
   text-shadow: 0 2px 5px rgba(0,0,0,0.5);
 }
+
+.menu-button{
+    @include transition(.4s);
+    position:fixed;
+    right:50px;
+    bottom:50px;
+    width:60px;
+    height:60px;
+    text-align:center;
+    line-height:60px;
+    border-radius:50%;
+    background-color:#E91E63;
+    color:#FFFFFF;
+    font-size:16px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.22);
+    cursor:pointer;
+    &:hover{
+        background:darken(#E91E63,5%);
+        box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.28), 0 4px 15px 0 rgba(0, 0, 0, 0.25);
+    }
+
+}
+
 </style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
  <header>
@@ -65,6 +88,9 @@ font-size: 20px;
       </nav>
     </header>
 <body>
+    <div class="menu-button">
+        <a href="{% url 'help' %}" style="color:#FFFFFF;">HELP</a>
+    </div>
     <br>
     <br>
     <hr>
