Customize Reset Password

--- a/match/templates/registration/change_password_done.html
+++ b/match/templates/registration/change_password_done.html
@@ -1,7 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Change password</h2>
-<p style="color:green;">Password changed with success!!!</p>
-<p>You may now <a href="{% url 'logout' %}?next=/accounts/login" id="id_logout"> Logout</a> and Login again</p>
+
+<style>
+
+div.text {
+  padding-left: 50px;
+}
+
+body {
+  background-image: url("{% url 'home' %}media/pic/profile_right.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: right;
+  background-size: 350px 800px;
+}
+
+</style>
+
+<div class="text">
+    <br>
+    <h2>Change password</h2><hr>
+    <div class="text">
+    <p style="color:green;">Password changed with success!!!</p>
+    <p>You may now <a href="{% url 'logout' %}?next=/accounts/login" id="id_logout"> Logout</a> and Login again</p>
+</div></div>
 {% endblock %}
