--- a/match/templates/registration/password_reset_confirm.html
+++ b/match/templates/registration/password_reset_confirm.html
@@ -1,8 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>Set new password</h2>
+<style>
+
+div.text {
+  padding-left: 50px;
+}
+
+body {
+  background-image: url("{% url 'home' %}media/pic/profile_right.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: right;
+  background-size: 350px 800px;
+}
+
+</style>
+
+<div class="text">
+    <br>
+    <h2>Set new password</h2><hr>
     {% if validlink %}
+    <div class="text">
     <form method="post">
         {% csrf_token %}
         {{form.as_p}}
@@ -13,4 +32,6 @@
             <a href="{ url 'password_reset' }">Request a new password reset token</a>
         </p>
     {% endif %}
+    </div>
+</div>
 {% endblock %}
