--- a/match/templates/registration/password_reset_form.html
+++ b/match/templates/registration/password_reset_form.html
@@ -1,9 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>Reset your password</h2>
+<style>
+
+div.text {
+  padding-left: 50px;
+}
+
+body {
+  background-image: url("{% url 'home' %}media/pic/profile_right.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: right;
+  background-size: 350px 800px;
+}
+
+input {
+  width: 50%;
+}
+
+</style>
+
+<div class="text">
+    <br>
+    <h2>Reset your password</h2><hr>
+    <div class="text">
     <form method="post">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit">Send confirmation link</button></form>
+        <button class="btn btn-success" type="submit">Send confirmation link</button></form>
+    </div>
+</div>
 {% endblock %}
