--- a/match/templates/registration/password_reset_complete.html
+++ b/match/templates/registration/password_reset_complete.html
@@ -1,6 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Password changed with success!!!</h2>
-<h5>You may now <a href="{% url 'login' %}">log in</a> again</h5>
+<style>
+
+div.text {
+  padding-left: 50px;
+}
+
+body {
+  background-image: url("{% url 'home' %}media/pic/profile_right.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: right;
+  background-size: 350px 800px;
+}
+
+</style>
+
+<div class="text">
+    <br>
+    <h2>Password changed with success!!!</h2><hr>
+    <div class="text">
+        <h5>You may now <a href="{% url 'login' %}">log in</a> again</h5>
+    </div>
+</div>
 {% endblock %}
