--- a/match/templates/registration/password_reset_done.html
+++ b/match/templates/registration/password_reset_done.html
@@ -1,7 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Reset your password</h2>
-<p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
-<p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+<style>
+
+div.text {
+  padding-left: 50px;
+}
+
+body {
+  background-image: url("{% url 'home' %}media/pic/profile_right.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: right;
+  background-size: 350px 800px;
+}
+
+</style>
+
+<div class="text">
+<br>
+<h2>Reset your password</h2><hr>
+    <div class="text">
+        <p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
+        <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+    </div>
+</div>
 {% endblock %}
